[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenwise"
version = "1.0.0"
description = "NLP-powered prompt token optimizer for Claude, GPT-4, and Codex"
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9",
    "tiktoken>=0.9",
    "langdetect>=1.0",
    "rich>=14.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "slowapi>=0.1.9",
]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["optimizer*"]

[project.scripts]
tokenwise = "main:main"
